compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_no_delete_let_usage.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport test_mod\n\nfn main() {\n  let x = [1, 2, 3]\n  test_mod.reverse(x)\n  test_mod.reverse(x)\n}\n    "
---

import test_mod

fn main() {
  let x = [1, 2, 3]
  test_mod.reverse([1, 2, 3])
  test_mod.reverse(x)
}
    
