compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_with_assign_val_tuple_let.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport test_mod\n\nfn main() {\n  let y = #(1, 2, 3)\n  let z = #(y, #(3, 4, 5))\n}\n        "
---

import test_mod

fn main() {
  
  let z = #(#(1, 2, 3), #(3, 4, 5))
}
        
