compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_with_assign_value_bin_op_let.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport test_mod\n\nfn main() {\n  let x = 1 + 2\n  let y = x + 3\n}\n    "
---

import test_mod

fn main() {
  
  let y = 1 + 2 + 3
}
    
