compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_with_assign_value_fn_call_let.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport test_mod\n\nfn main() {\n  let q = test_mod.reverse([1, 2, 3])\n  let z = test_mod.reverse(q)\n}\n    "
---

import test_mod

fn main() {
  
  let z = test_mod.reverse(test_mod.reverse([1, 2, 3]))
}
    
